dark mode fixes

--- a/cpai/src/Component/Physicians/index.css
+++ b/cpai/src/Component/Physicians/index.css
@@ -7,7 +7,7 @@
 }
 
 .dark .physician-section2 {
-  margin: 150px 0;
+  margin: 100px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
