--- a/cpai/src/Component/Services/index.css
+++ b/cpai/src/Component/Services/index.css
@@ -7,7 +7,7 @@
 }
 
 .dark .service-section {
-  padding: 175px 0;
+  padding: 100px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
